--- a/index.html
+++ b/index.html
@@ -1080,8 +1080,8 @@
           <div class="test-icon">
             <i class="bi bi-person-badge"></i>
           </div>
-          <h3 class="test-title">大五人格测试</h3>
-          <p class="test-description">基于大五人格理论的测试，评估开放性、尽责性、外向性、宜人性和神经质五个维度的人格特质。</p>
+          <h3 class="test-title">自恋人格量表NPI-16</h3>
+          <p class="test-description">NPD心理学研究中常用的自恋人格量表，用于自测量自恋特质倾向，帮助识别潜在的心理健康问题。</p>
           <div class="test-meta">
             <div class="test-time">
               <i class="bi bi-clock"></i> 15分钟
@@ -1096,8 +1096,8 @@
           <div class="test-icon">
             <i class="bi bi-emoji-smile"></i>
           </div>
-          <h3 class="test-title">情绪智力测试</h3>
-          <p class="test-description">评估识别、理解和管理情绪的能力，包括自我情绪意识、情绪管理、社交意识和关系管理四个维度。</p>
+          <h3 class="test-title">NPD自查清单</h3>
+          <p class="test-description">长期稳定的行为模式才有意义，不是偶尔的表现，帮助识别潜在的心理健康问题。</p>
           <div class="test-meta">
             <div class="test-time">
               <i class="bi bi-clock"></i> 20分钟
@@ -1112,8 +1112,8 @@
           <div class="test-icon">
             <i class="bi bi-shield-check"></i>
           </div>
-          <h3 class="test-title">心理健康筛查</h3>
-          <p class="test-description">评估焦虑、抑郁、压力和幸福感等心理健康指标，帮助识别潜在的心理健康问题和提供改善建议。</p>
+          <h3 class="test-title">NPD特质与NPD反向特质对照</h3>
+          <p class="test-description">左侧是典型的NPD特质，右侧是NPD反向特质，帮助排除潜在的心理健康问题。</p>
           <div class="test-meta">
             <div class="test-time">
               <i class="bi bi-clock"></i> 10分钟
